# test-django-cloud-build

./: Dockerfile  cloudbuild.yaml  pyproject.toml  test.sh
basic_django/basic_django/: settings.py  tests.py
