[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "cloud-build-django"
packages = [{include = "basic_django"}]
version = "0.1.0"

[tool.poetry.dependencies]
django = "^4.1.7"
python = "^3.11"
gunicorn = "^20.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
